[project]
name = "comfyui_hfdownload"
description = "Download the model from huggingface and put it in any directory."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/icesun963/ComfyUI_HFDownLoad"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_HFDownLoad"
Icon = ""
